<package>
  <name>lab5</name>
  <version>1.0.0</version>
  <description>
  This package contains an ardrone world with landing pad and framework code
  </description>
  <maintainer email="james.irwin@wsu.edu">James Irwin</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
